modify assets ,estate.html

--- a/estate.html
+++ b/estate.html
@@ -4,9 +4,227 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Malimali Estate</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <script src="https://use.fontawesome.com/c49e769e45.js"></script>
 </head>
 <body>
+    <div id="first-container">
+    <div class="header-container">
+        <div class="logo">
+                <h3>Malimali Estate</h3>
+
+            </div>
+            <nav>
+                <ul>
+                    <li><a id="home" href="#">Home</a></li>
+                    <li><a id="sellers" href="#">Seller</a></li>
+                    <li><a id="buyers" href="#">Buyers</a></li>
+                    <li><a id="properties" href="#">Propeties</a></li>
+                    <li><a id="valuation" href="#">Valuation</a></li>
+                    <li><a id="about" href="#">About</a></li>
+                    <li><a id="contacts" href="#">Contacts</a></li>
+                    <li><a id="login" href="#">Login</a></li>
+
+                </ul>
+            </nav>
+    </div>
+    <div class="section">
+        <h1>Sell or rent your home at the best price</h1>
+        <form action="button" id="buttons">
+            <button id="button1">Sale</button>
+            <button id="button2">Rent</button>
+        </form>
+        <div id="search-area">
+            <i class="fa fa-home" aria-hidden="true"></i>
+            <!-- <label for="property">Property</label> -->
+            <select id="framework">
+                <!-- <octgroup label="Property"> -->
+                    <option value="text">Property Type</option>
+                    <option value="text">Duplex</option>
+                    <option value="text">Triplex</option>
+                    <option value="">Townhouses</option>    
+                <!-- </octgroup> -->
+            </select>
+            <select name="location" id="location">
+                <option value="text">Kisumu</option>
+                <option value="text">Nairobi</option>
+                <option value="text">Mombasa</option>
+                <option value="text">Nakuru</option>
+            </select>
+            <select name="max-Price" id="Price">
+                <option value="number">Max Price</option>
+            </select>
+            <div class="search">
+            <i class="fa fa-search" aria-hidden="true"></i>
+            <input type="text" placeholder="Search by location or Propety ID">
+            <button id="button3">Search</button>
+            </div>
+        </div>
+    </div>
+</div>
+   <div id="container2">
+    <h3>Our Products</h3>
+    <div id="description">
+        <h3>How it works.</h3>
+        <p>This is how our Products works</p>
+        <div id="description2">
+        <div id="find-home">
+            <img id="img1" src="/assets/images/438-4381028_location-icon-png-ios-address-clipart-transparent-png.png" width="3%" alt="">
+            <h3>Find Home</h3>
+            <p>Our propeties are located at prime areas where by there won't be problem with transportation</p>
+        </div>
+        <div id="payment-methods">
+        <img src="/assets/images/Geofencing-Image.png" width="5%" alt="">
+        <h3>Make payments</h3>
+        <p>Our estates comes with good network,portable,24hrs light and round the clock security supported by well fitted security cameras.</p>
+    </div>
+    <div id="makeItOfficial">
+        <img src="https://play-lh.googleusercontent.com/7QLDMk92tSStYq90HrPZkv49mvzidiNTzS_ssowCwxA8_qw1o4A1YXf7bJuIfGqbolI=w240-h480-rw" width="5%" alt="">
+        <p>wWe have been in operation for the past 15years. This has made our company one of the most trusted one in the country .Most of our clients have testified on our good service delivery.</p>
+    </div>
+      </div>
+    </div>
+   </div>
+   <div id="container3">
+    <img src="/assets/images/5-bedrooms-townhouse-GWOcukpJDy-14752.png" width="20%" alt="">
+    <h3>Why us.</h3>
+<div id="input">
+    <p>we create quality urban lifestyles,building stronger communities .We have a well established customer seller relationship fromthe past experience</p> 
+
+    <input type="checkbox" id="world-class" name="world-class" >
+    <label for="world-class">world-class</label>
+
+    <input type="checkbox" id="trusted" name="trusted" >
+    <label for="trusted">trusted</label>
+
+    <input type="checkbox" id="Affordable" name="Affordable" >
+    <label for="Affordable">Affordable</label>
+
+    <input type="checkbox" id="Flexible-location" name="Flexible location" >
+    <label for="Flexible location">Flexible location</label> 
+
+    <input type="checkbox" id="Adequate-security" name="Security" >
+    <label for="security">Adequate security</label>
     
+  </div>
+   </div>
+   <div id="properties">
+    <div id="house1" >
+        <img src="" alt="">
+        <p>19000 USD <br>
+        There is room for negotiation</p>
+        <div id="house1-descr">
+            <i class="fa fa-bed" aria-hidden="true"></i>
+            <p>3 <br>Bedroooms</p>
+            <i class="fa fa-bath" aria-hidden="true"></i>
+            <p>5 <br>Bathrooms</p>
+            <i class="fa-solid fa-draw-square"></i>
+            <p>2000m sqr<br>Living Area</p>
+        </div>
+    </div>
+    <div id="house2" >
+        <img src="" alt="">
+        <p>23000 USD <br>Has aswimming pool,grauge,with Gym <br>Runda,Westlands</p>
+        <i class="fa fa-bed" aria-hidden="true"></i>
+        <p>6 <br>Bedroooms</p>
+        <i class="fa fa-bath" aria-hidden="true"></i>
+        <p>5 <br>Bathrooms</p>
+        <i class="fa-solid fa-draw-square"></i>
+        <p>15000m sqr</p>
+    </div>
+    <div id="house3">
+        <img src="" alt="">
+        <p>12000 USD <br>Malimali spacious 5 Bedroom Mansion for sale.</p>
+        <i class="fa fa-bed" aria-hidden="true"></i>
+        <p>5 <br>Bedroooms</p>
+        <i class="fa fa-bath" aria-hidden="true"></i>
+        <p>5 <br>Bathrooms</p>
+        <i class="fa-solid fa-draw-square"></i>
+        <p>17000m sqr</p>
+    </div>
+    <button id="button4">View more</button>
+   </div>
+    <div id="testimonials"><h3>Our Esteemed Customers</h3>
+    <p>This is what our clients with prior experience to our services have said about us.</p>
+   </div>
+   <div id="container4">
+   <div id="customer1" >
+    <h3>Irene Amoit</h3>
+    <h4>Kenyan</h4>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos, tempora! Placeat dolore explicabo omnis! Aperiam voluptatibus ducimus perspiciatis explicabo tenetur temporibus. Provident maxime quidem rerum maiores nostrum alias voluptates deserunt.</p>
+   </div>
+   <div id="customer2">
+    <h3>Oscar Okumu</h3>
+    <h4>Ugandan</h4>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam earum quaerat iste minus aut! Voluptatibus, deleniti quis sint fugiat quidem doloribus. Molestiae cupiditate inventore doloremque odit, fugit animi placeat ut!</p>
+   </div>
+   <div id="customer3">
+    <h3>Abdikadir Mouhamed</h3>
+    <h4>Indian</h4>
+    <button id="button5">View More</button>
+   </div>
+</div>
+<footer>
+    <div id="Malimali Estate">
+        This is a place you won't wish to miss out. We offer solution for easy and flexible house hunting and selling platform.You can prove from our customer's testimonials.
+    </div>
+    <div id="Sellers">
+        <h3>Sellers</h3>
+     <p> We work with many independent local property experts who know their market perfectly.We will put you in touch with the best</p>
+    </div>
+    <div id="Buyers">
+        <h3>Buyers</h3>
+       <p>We work with many independent local property experts who know their market perfectly.We will put you in touch with the best.</p>
+    </div>
+    <div id="valuation">
+        <h3>Valuation</h3>
+        Estimating the value of your home online is the first step towards finding the optimal sale price
+    </div>
+    <div id="Property">
+         <h3>Property</h3>
+        <ul>
+            <li><a href="#">Products</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Log in</a></li>
+            <li><a href="#"> Learning Modules</a></li>
+            <li><a href="#"> Partnership</a></li>
+            <li><a href="#"> Watch-demo</a></li>
+            <li><a href="#"> Events</a></li>
+
+        </ul>
+    </div>
+    <div id="About"> 
+        <h3>About Us</h3>
+        <ul>
+            <li><a href="#"> Our Company</a></li>
+            <li><a href="#"> Career</a></li>
+            <li><a href="#"> Investors Relations</a></li>
+            <li><a href="#"> Social Impact</a></li>
+        </ul>
+    </div>
+    <div id="Helpful Links">
+        <h3>Helpful Links</h3>
+    <ul>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Suppoters</a></li>
+        <li><a href="#">Terms & Condition</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+    </ul>
+</div>
+<div id="subscription">
+    <h4>Subscribe More Info</h4>
+    <input text="email" id="email" placeholder="Enter your Email">
+    <button>Subscribe</button>
+</div>
+<div id="get-touch" >
+    <h3>Get in touch</h3>
+    Questions or Feedback?
+    We'd love to hear from you
+    <div id="social-handles">
+
+    </div>
+</div>
+</footer>
 </body>
 </html>
