added new files,modify assets/css/style.css && modify estate.html

--- a/estate.html
+++ b/estate.html
@@ -61,13 +61,13 @@
               <p id="num">(+254)7540989 <br><h4>Email The Team</h4>info@malimali.com br
               1255 Coast Village Rd,Suite 102B Santa Barbara,CA 93108</p>
             </div>
-            <li> <form class="form--hidden" id="login">
+            <li> <form class="form" id="login">
               <h2 class="form__tittle">Login</h2>
               <div class="form__message-error"></div>
               <div class="form__message-success"></div>
               <div class="form__input-group">
                 <input type="text" class="form-input" autofocus placeholder="Enter Username or email">
-                <div class="form_input-error-message"></div>
+                <div class="form__input-error-message"></div>
               </div>
               <div class="form__input-group">
                 <input type="text" class="form-input" autofocus placeholder="Enter Password">
@@ -82,12 +82,12 @@
               </p>
             </form>
           </li>
-          <li> <form class="form" id="createAccount">
+          <li> <form class="form--hidden" id="createAccount">
             <h2 class="form__tittle">Create Account</h2>
             <div class="form__message-error">
             </div>
             <div class="form__input-group">
-              <input type="text" class="form-input" autofocus placeholder="Enter Username ">
+              <input type="text" id="signupUsername" class="form-input" autofocus placeholder="Enter Username ">
               <div class="form_input-error-message"></div>
             </div>
             <div class="form__input-group">
@@ -148,7 +148,7 @@
             <option value="number">Max Price</option>
           </select>
           <div class="search">
-            <input id="placeholder" type="text" placeholder="Search by location or Propety ID"  <i class="fa fa-search" aria-hidden="true"></i>/>
+            <input id="placeholder" type="text" placeholder="Search by location or Propety ID"/>
           </div>
          <div><button id="button3">Search</button></div> 
         </div>
@@ -257,26 +257,20 @@
         <h3>Irene Amoit</h3>
         <h4>Kenyan</h4>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos,
-          tempora! Placeat dolore explicabo omnis! Aperiam voluptatibus ducimus
-          perspiciatis explicabo tenetur temporibus. Provident maxime quidem
-          rerum maiores nostrum alias voluptates deserunt.
+          hello ,Malimali are really wonderful. i have tested there services and they are actually amazing
         </p>
       </div>
       <div id="customer2">
         <h3>Oscar Okumu</h3>
         <h4>Ugandan</h4>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam earum
-          quaerat iste minus aut! Voluptatibus, deleniti quis sint fugiat quidem
-          doloribus. Molestiae cupiditate inventore doloremque odit, fugit animi
-          placeat ut!
+          Wondeful indeed,great services
         </p>
       </div>
       <div id="customer3">
         <h3>Abdikadir Mouhamed</h3>
         <h4>Indian</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus pariatur adipisci quas consequuntur, nostrum ipsum voluptatum debitis reiciendis! Odit commodi maiores ex, vitae quas quos iusto ratione repellendus eum.</p>
+        <p>Good and kind services</p>
       </div>
       <div class="button5"><button id="button5">View More</button></div> 
      <script src="/assets/script/script.js" ></script>
